2001-07-23  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_builtin.h: ISO-106464/UTF-8/ transformation must
	really be an alias.

2001-07-23  Andreas Jaeger  <aj@suse.de>

	* iconv/iconvconfig.c: Include <sys/cdefs.h> and use
	__attribute_malloc__ for older GCC versions.
	* iconv/strtab.c: Likewise.
	Add prototypes to avoid warnings.

2001-07-22  Roland McGrath  <roland@frob.com>

	* hurd/hurdsig.c (_hurd_internal_post_signal): Support SA_RESETHAND
	and SA_NODEFER options.	 Spurred to action by Igor Khavkine.

	* sysdeps/generic/bits/sigaction.h [__USE_UNIX98 || __USE_MISC]
	(SA_NODEFER, SA_RESETHAND): New macros, same bit values as FreeBSD.
	[__USE_MISC] (SA_INTERRUPT): New macro, value 0.
	[__USE_MISC] (SA_NOMASK, SA_ONESHOT, SA_STACK): New macros, aliases
	as in other sysdeps versions of this file.

	* sysdeps/generic/bits/sigaction.h (struct sigaction): Use a union
	and provide sa_handler and sa_sigaction member names as macros, as
	done in other sysdeps versions of this file.
	Suggested by Igor Khavkine <i_khavki@alcor.concordia.ca>.

2001-07-23  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex.c: Revamp memory allocation for WCHAR functions to
	not use too much stack.

2001-07-22  Ulrich Drepper  <drepper@redhat.com>

	* iconv/iconvconfig.c (write_output): Update comment explaining
	output format.

	* elf/dl-load.c (_dl_dst_count): In SUID binaries expand $ORIGIN
	if it is alone.
	(_dl_dst_substitute): Likewise.

	* iconv/iconvconfig.c: Remove --verbose option.  Comment out
	mcheck_verbose call.

	* iconv/strtab.c (morememory): Fix little memory handling problem.

2001-07-22  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/sysdep.h (INLINE_SYSCALL): Don't
	mark asm input operand as clobbered.
	* sysdeps/unix/sysv/linux/m68k/brk.c (__brk): Likewise.

2001-07-22  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_builtin.c (struct builtin_map): Remove init and end
	elements.